practic/src/main/java/com/example/practic/error/ErrorDetails.java
package com.example.practic.error;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter

public class ErrorDetails {
    private String message;
}
